flapivor/tests/m3/hopix/typechecker/good/49-pattern-matching-13.hopix
val x : Int = case "Doctor" { "Doctor" => 1 | (_ : String) => 0 }