flapivor/tests/m3/hopix/typechecker/bad/82-pattern-03.hopix
val main : Int =
    case 0 { (x : Int) | (y : String) => x }